--- a/Front End/index.html
+++ b/Front End/index.html
@@ -28,17 +28,21 @@
 			</header>
 
 			<div id="main">
-				<form class="box" method="post" action="" enctype="multipart/form-data">
+				<!-- <form class="box" method="post" action="" enctype="multipart/form-data">
 					<div class="box__input">
 						<svg class="box__icon" width="50" height="43" viewBox="0 0 50 43" src="../images/upload icon.svg"></svg>
 					    <input class="box__file" type="file" name="files[]" id="file" data-multiple-caption="{count} files selected" multiple />
 					    <label for="file"><strong>Choose a file</strong><span class="box__dragndrop"> or drag it here</span>.</label>
 					    <button class="box__button" type="submit">Upload</button>
 					</div>
-					<div class="box__uploading">Uploading&hellip;</div>
-					<div class="box__success">Done!</div>
-					<div class="box__error">Error! <span></span>.</div>
-				</form>
+				</form> -->
+				<div class="box-inputs">
+					<!-- <svg class="box-icon" width="60" height="60" viewBox="0 0 60 60" src="assets/images/upload icon2.svg"></svg> -->
+					<img src="assets/images/upload icon.png">
+					<p>
+						Please upload a picture of the face of the criminal
+					</p>
+				</div>
 			</div>
 		</div>
 
