--- a/Front End/index.html
+++ b/Front End/index.html
@@ -4,9 +4,8 @@
 		<title>Criminal Recognition</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/style.css"/>
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body>
 		<!-- Wrapper-->
@@ -28,14 +27,14 @@
 			</header>
 
 			<div id="main">
-				<form class="box" enctype="multipart/form-data">
+				<div class="box">
 					<div class="box-inputs">
 						<!-- <img class="upload-image" src="assets/images/upload icon white.png"> -->
 					    <input class="box-file" type="file" name="file" id="file" data-multiple-caption="{count} files selected" multiple />
 					    <label for="file"><strong>Choose a file</strong><span class="box__dragndrop"> and click Upload</span>.</label>
 					    <button onclick="upload()" class="box-button" type="submit">Upload</button>
 					</div>
-				</form>
+				</div>
 				<!-- <title>Is this a picture of Obama?</title>
 				    <h1>Upload a picture and see if it's a picture of Obama!</h1>
 				    <form method="POST" enctype="multipart/form-data">
