--- a/Front End/index.html
+++ b/Front End/index.html
@@ -55,7 +55,7 @@
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery-3.2.1.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/script.js"></script>
 
 	</body>
 </html>
