Updated style and changed project name

--- a/Front End/index.html
+++ b/Front End/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Criminal Recognition</title>
+		<title>Viridesense</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/style.css"/>
@@ -18,7 +18,8 @@
 				-->
 				<div class="content">
 					<div class="inner">
-						<h1>Criminal Recognition</h1>
+						<h1 class="main-title">Virid&middot;essense</h1>
+						<h2 class="sub-heading">&#8212;Criminal Recognition&#8212;</h2>
 						<p>
 							A service for detecting criminals using public social media accounts and facial recognition.
 						</p>
