--- a/Front End/index.html
+++ b/Front End/index.html
@@ -28,7 +28,7 @@
 			</header>
 
 			<div id="main">
-				<div class="box">
+				<div class="box" id="upload-box">
 					<div class="box-inputs">
 						<!-- <img class="upload-image" src="assets/images/upload icon white.png"> -->
 					    <input class="box-file" type="file" name="file" id="file" data-multiple-caption="{count} files selected" multiple />
@@ -36,19 +36,9 @@
 					    <button onclick="upload()" class="box-button" type="submit">Upload</button>
 					</div>
 				</div>
-				<!-- <title>Is this a picture of Obama?</title>
-				    <h1>Upload a picture and see if it's a picture of Obama!</h1>
-				    <form method="POST" enctype="multipart/form-data">
-				      	<input type="file" name="file">
-				      	<input type="submit" value="Upload">
-				    </form> -->
-				<!-- <div class="box-inputs">
-					<svg class="box-icon" width="60" height="60" viewBox="0 0 60 60" src="assets/images/upload icon2.svg"></svg>
-					<img src="assets/images/upload icon white.png">
-					<p class="input-text">
-						Please upload a picture of the face of the criminal
-					</p>
-				</div> -->
+
+				<div class="image-placeholder box"></div>
+
 			</div>
 		</div>
 
