Added a ton of code to display the results to the DOM

--- a/Front End/index.html
+++ b/Front End/index.html
@@ -40,6 +40,19 @@
 
 					<div class="image-placeholder box"></div>
 				</div>
+				<div>
+					<p id="search-results">Search Results</p>
+				</div>
+				<!-- <div class="results-flex-container">
+					<div class="result results-flex-container">
+						<img src="assets/images/obama.jpeg" class="result-box">
+						<ul class="result-list">
+							<li class="result-item">Barack Obama</li>
+							<li class="result-item">Match: 30%</li>
+							<li class="result-item">[insert social media link]</li>
+						</ul>
+					</div>
+				</div> -->
 
 			</div>
 		</div>
