--- a/Front End/index.html
+++ b/Front End/index.html
@@ -21,7 +21,7 @@
 						<h1 class="main-title">Virid&middot;essense</h1>
 						<h2 class="sub-heading">&#8212;Criminal Recognition&#8212;</h2>
 						<p>
-							A service for detecting criminals using public social media accounts and facial recognition.
+							A service for identifying criminals using public social media accounts and facial recognition.
 						</p>
 					</div>
 				</div>
