--- a/Front End/index.html
+++ b/Front End/index.html
@@ -37,17 +37,14 @@
 						    <button onclick="upload()" class="box-button" type="submit">Upload</button>
 						</div>
 					</div>
-				<div class="results-flex-container">
+				</div>
+				<div class="preview-flex-container">
 					<div class="image-placeholder box"></div>
-						<div class="result results-flex-container">
-							<img src="assets/images/obama.jpeg" class="result-box">
-							<ul class="result-list">
-								<li class="result-item">Barack Obama</li>
-								<li class="result-item">Match: 30%</li>
-								<li class="result-item">[insert social media link]</li>
-							</ul>
-						</div>
-					</div>
+					<ul class="result-list">
+						<li class="result-item">Barack Obama</li>
+						<li class="result-item">Match: 30%</li>
+						<li class="result-item">[insert social media link]</li>
+					</ul>
 				</div>
 				<div>
 					<p id="search-results">Search Results</p>
