--- a/Front End/index.html
+++ b/Front End/index.html
@@ -39,12 +39,14 @@
 					</div>
 				</div>
 				<div class="preview-flex-container">
-					<div class="image-placeholder box"></div>
-					<ul class="result-list">
-						<li class="result-item">Barack Obama</li>
-						<li class="result-item">Match: 30%</li>
-						<li class="result-item">[insert social media link]</li>
-					</ul>
+					<div class="preview-flex-box">
+						<div class="image-placeholder box"></div>
+						<ul class="result-list">
+							<li class="preview-item" id="sex">asdfsdaf</li>
+							<li class="preview-item" id="age">asdfsadf</li>
+							<li class="preview-item" id="glasses">lkxdjfklkdsjf</li>
+						</ul>
+					</div>
 				</div>
 				<div>
 					<p id="search-results">Search Results</p>
