--- a/Front End/index.html
+++ b/Front End/index.html
@@ -38,10 +38,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="preview-flex-container">
+				<div class="preview-flex-container preview">
 					<div class="preview-flex-box">
 						<div class="image-placeholder box"></div>
-						<ul class="result-list">
+						<ul class="preview-list">
 							<li class="preview-item" id="sex">asdfsdaf</li>
 							<li class="preview-item" id="age">asdfsadf</li>
 							<li class="preview-item" id="glasses">lkxdjfklkdsjf</li>
