--- a/Front End/index.html
+++ b/Front End/index.html
@@ -39,7 +39,7 @@
 					</div>
 				</div>
 				<div class="preview-flex-container preview">
-					<div class="preview-flex-box">
+					<div class="preview-flex-container">
 						<div class="image-placeholder box"></div>
 						<ul class="preview-list">
 							<li class="preview-item" id="sex">asdfsdaf</li>
